@@ -348,8 +348,10 @@ enum step_over_calls_kind
   {
     STEP_OVER_NONE,
     STEP_OVER_ALL,
-    STEP_OVER_UNDEBUGGABLE,
-  } step_over_calls;
+    STEP_OVER_UNDEBUGGABLE
+  };
+
+extern enum step_over_calls_kind step_over_calls;
 
 /* If stepping, nonzero means step count is > 1
    so don't print frame next time inferior stops
